--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1" />
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="stylesheet" href="reset.css" />
+    <script src="https://kit.fontawesome.com/824c30605e.js" crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
   <body>
